Fix main pg intro extra margin

--- a/css/common.css
+++ b/css/common.css
@@ -45,7 +45,6 @@ body {
   font-family: 'Lato', sans-serif;
   background-color: #f2f2f2;
   margin: 0;
-
 }
 
 /*Nav bar styles------------------------------------------------------------- */
@@ -64,8 +63,8 @@ body {
   height: 100%;
 }*/
 .primary-banner {
-   border: 1px solid blue;
-    width: 100%;
+  padding: 3em;;
+  width: 100%;
   height: 500px;
   background-image: url("/images/sfog.jpg");
   background-size: cover;
@@ -145,7 +144,7 @@ or else app font overflows due to increased line-height from page-wrapper */
   margin-bottom: 3em;
    width: 60%;
    margin: 0 auto;
-
+   color: white;
 }
 
 .hello {
